[package]

name = "john"
version = "0.4.0"
authors = ["Alexey Fedorov <alexey.fedorov@wimdu.com>"]

[dependencies.raft_rs]

git = "https://github.com/johnmq/raft-rs.git"
version = "0.0.2"

[dependencies.iron]

git = "https://github.com/iron/iron.git"

[dependencies.router]

git = "https://github.com/iron/router.git"
